# noise-gate

./: Cargo.toml  LICENSE  README.md
examples/: feedback.rs
src/: lib.rs
